2010-10-08  Thomas Adam <thomas@fvwm.org>
	* documentation/manpages/unstable:
	Regenerated to remove erroneous link.

2010-10-08  Thomas Adam <thomas@fvwm.org>
	* documentation/manpages/unstable:
	Regenerated.

2010-08-31  Thomas Adam <thomas@xteddy.org>
	* links.php:
	* screenshots/desktops/screenshot_db.inc:
	* screenshots/desktops/Andrew_Dolgov-1152x864/description.inc:
	* screenshots/desktops/Nuno_Alexandre-1600x1200/description.inc:
	* screenshots/desktops/Piotr_Zielinski-1024x768/description.inc:
	* screenshots/desktops/Remko_Troncon-desk-1024x768/description.inc:
	* screenshots/desktops/Thomas_Adam-desk-1280x960/description.inc:
	* screenshots/desktops/j_g_a_van_riswick-desk-1152x864/description.inc:
	Updated to remove dead links and/or to update to newer ones.

2010-08-31  Thomas Adam <thomas@xteddy.org>
	* documentation/faq/index.php:
	Updated -- with reference to window decorations question.

2010-08-27  Thomas Adam <thomas@xteddy.org>
	* links.php:
	Update links to point to fvwmwiki and fvwmforums correctly.

2010-08-09  Thomas Adam <thomas@xteddy.org>
	* authors/index.php:
	* news/index.php:
	* doc/unstable:
	* documentation/manpages/unstable:
	Regenerated for 2.5.31 releae.

2010-05-09  Thomas Adam <thomas@xteddy.org>
	* authors/index.php:
	* news/index.php:
	* doc/unstable:
	* documentation/manpages/unstable:
	Regenerated for 2.5.30 releae.

2010-04-03  Thomas Adam <thomas@xteddy.org>
	* authors/index.php:
	* news/index.php:
	* doc/unstable:
	* documentation/manpages/unstable:
	Regenerated for 2.5.29 releae.

	* definitions.inc:
	Updated for 2.5.29 release.

2010-03-08  Thomas Adam <thomas@xteddy.org>
	
	* fvwm-cats/index.php:
	* fvwm-cats/mildred.jpg:
	* fvwm-cats/mildred.php:
	* fvwm-cats/small_mildred.jpg:
	Add in photo of Mildred.

2010-02-19    <despen@verizon.net>

	* authors/pictures/Dan_Espen.php: Fix link to personal web page.

2010-02-20  Thomas Adam  <thomas@xteddy.org>
	* authors/pictures/create_php.sh:
	* authors/pictures/Thomas_Adam.pgp: