@@ -1,3 +1,7 @@
+2011-01-29  Thomas Adam <thomas@fvwm.org>
+	* documentation/faq/index.php:
+	Updated to reflect addition of #3.30
+
 2010-10-08  Thomas Adam <thomas@fvwm.org>
 	* documentation/manpages/unstable:
 	Regenerated to remove erroneous link.
